scaffolded users and tymls tables
and prettied up the show and index pages for users

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,9 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<%= link_to "Users", users_url %> |
+<%= link_to "TYMLs", tymls_url %>
+
 
 <%= yield %>
 
