improved users and tyml index views

--- a/app/views/tymls/index.html.erb
+++ b/app/views/tymls/index.html.erb
@@ -14,9 +14,9 @@
 
 <% @tymls.each do |tyml| %>
   <tr>
-    <td><%= tyml.sender.name %></td>
-    <td><%= tyml.receiver.name %></td>
-    <td><%= tyml.url %></td>
+    <td><%= link_to tyml.sender.name, tyml.sender %></td>
+    <td><%= link_to tyml.receiver.name, tyml.receiver %></td>
+    <td><%= link_to tyml.url %></td>
     <td><%= tyml.note %></td>
     <td><%= tyml.viewed %></td>
     <td><%= link_to 'Show', tyml %></td>
