--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -42,7 +42,7 @@
   <% @user.sent_tymls.each do |tyml| %>
   <ul>
     <li><%=  tyml.receiver.name %></li>
-    <li><%=  link_to tyml.url, tyml_url(tyml, :url => tyml.url), :target => '_blank' %></li>
+    <li><%=  link_to tyml.url, tyml_url(tyml, :viewed => tyml.viewed.to_s, :url => tyml.url), :method => 'put', :target => '_blank' %></li>
     <li><%=  tyml.note %></li>
     <li>Viewed: <%=  tyml.viewed %></li>
   </ul>
