added create tyml form to user show page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -25,6 +25,8 @@
   <%= @user.location %>
 </p>
 
+<%= render 'tyml_form' %>
+
 <p>
   <b>Recieved TYMLs:</b>
   <% @user.received_tymls.each do |tyml| %>
