improved tyml show page

--- a/app/views/tymls/show.html.erb
+++ b/app/views/tymls/show.html.erb
@@ -2,12 +2,12 @@
 
 <p>
   <b>Sender:</b>
-  <%= @tyml.sender_id %>
+  <%= @tyml.sender.name %>
 </p>
 
 <p>
   <b>Receiver:</b>
-  <%= @tyml.receiver_id %>
+  <%= @tyml.receiver.name %>
 </p>
 
 <p>
