Added basic authentification with Devise.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,12 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<%= link_to "Users", users_url %> |
-<%= link_to "TYMLs", tymls_url %>
 
+<%= link_to "Users", users_url %> |
+<%= link_to "TYMLs", tymls_url %> | <%= link_to "Sign-out", destroy_user_session_path, :method => 'delete' %>
+
+<p class="notice"><%= notice %></p>
+<p class="alert"><%= alert %></p>
 
 <%= yield %>
 
