--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,7 +12,7 @@
 
 <p>
   <b>Profile pic:</b>
-  <%= image_tag @user.profile_pic, :width => 200, :class => "profile_pic" %>
+    <%= image_tag((@user.profile_pic), :width => 200, :class => "profile_pic") unless @user.profile_pic.nil? %>
 </p>
 
 <p>
