Redirect to Dashboard on sign-in.

--- a/app/views/users/_tyml_form.html.erb
+++ b/app/views/users/_tyml_form.html.erb
@@ -1,6 +1,6 @@
-<%= form_for @tyml do |f| -%>
+<%= form_for @tyml do |f| %>
 
-  <%= f.hidden_field :sender_id, :value => @user.id %>
+  <%= f.hidden_field :sender_id, :value => @current_user.id %>
 
   <p><%= f.label :receiver_id, "Send to:" %>
     <%= f.collection_select :receiver_id, User.all, :id, :name %>
