--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,8 @@
 <body>
 
 <%= link_to "Users", users_url %> |
-<%= link_to "TYMLs", tymls_url %> | <%= link_to "Sign-out", destroy_user_session_path, :method => 'delete' %>
+<%= link_to "TYMLs", tymls_url %>
+<%= (link_to "| Sign-out", destroy_user_session_path, :method => 'delete') if user_signed_in? %>
 
 <p class="notice"><%= notice %></p>
 <p class="alert"><%= alert %></p>
