--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,10 +7,13 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= link_to "Users", users_url %> |
-<%= link_to "TYMLs", tymls_url %>
-<%= (link_to "| Sign-out", destroy_user_session_path, :method => 'delete') if user_signed_in? %>
+  <header class="header" role="banner">
+    <div class="container">
+      <%= link_to "Users", users_url %> |
+      <%= link_to "TYMLs", tymls_url %>
+      <%= (link_to "| Sign-out", destroy_user_session_path, :method => 'delete') if user_signed_in? %>
+    </div>
+  </header>
 
 <p class="alert"><%= alert %></p>
 
