--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
 <body>
   <header class="header" role="banner">
     <div class="container">
+      <%= link_to "TYML", tymls_url, :class => 'logo' %>
       <%= link_to "Users", users_url %> |
       <%= link_to "TYMLs", tymls_url %>
       <%= (link_to "| Sign-out", destroy_user_session_path, :method => 'delete') if user_signed_in? %>
