--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+  <link href='http://fonts.googleapis.com/css?family=Exo:400,800,800italic,400italic|Open+Sans:300italic,400italic,300,400' rel='stylesheet' type='text/css'>
 </head>
 <body>
   <header class="header" role="banner">
