--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -64,6 +64,26 @@ table {
 html {
   font-size: 18px;
   line-height: 1.5em;
+  font-family: 'Open Sans', Helvetica, sans-serif;
+  font-weight: 300;
+  width: 100%;
+  height: 100%;
+  background: #1b75bb;
+}
+
+body {
+  background: #62b1e2;
+  background: -moz-radial-gradient(center, ellipse cover,  #62b1e2 0%, #1b75bb 55%);
+  background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,#62b1e2), color-stop(55%,#1b75bb));
+  background: -webkit-radial-gradient(center, ellipse cover,  #62b1e2 0%,#1b75bb 55%);
+  background: -o-radial-gradient(center, ellipse cover,  #62b1e2 0%,#1b75bb 55%);
+  background: -ms-radial-gradient(center, ellipse cover,  #62b1e2 0%,#1b75bb 55%);
+  background: radial-gradient(ellipse at center,  #62b1e2 0%,#1b75bb 55%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#62b1e2', endColorstr='#1b75bb',GradientType=1 );
+  height: 100%;
+  width: 100%;
+  background-repeat: no-repeat;
+  padding: 0 1em;
 }
 
 *, :after, :before {
@@ -74,9 +94,43 @@ html {
 
 }
 
-.logo {
+.header nav {
+  text-align: right;
+  margin: 1em auto;
+}
+.header nav a {
+  color: white;
+  text-decoration: none;
+  margin-left: 1em;
+}
+
+.header nav a:first-child {
+  margin-left: 0;
+}
+
+.header nav a:hover {
+  text-decoration: none;
+}
+
+.logo-send {
   font-family: "Exo", Helvetica, sans-serif;
   font-weight: 800;
+  font-size: 7em;
+  text-align: center;
+  color: white;
+}
+
+.logo-send a {
+  text-decoration: none;
+  color: white;
+}
+
+.tagline-send {
+  font-size: 2em;
+  text-align: center;
+  line-height: 1.2;
+  color: white;
+  margin: 1.25em auto;
 }
 
 .container {
@@ -86,4 +140,20 @@ html {
 
 .profile_pic {
   border-radius: 50%;
+}
+
+.note-form {
+  width: 600px;
+  margin: 0 auto;
+  color: white;
+}
+
+input, textarea, select {
+  width: 100%;
+  font-size: 2em;
+  border: 1px solid #aaa;
+}
+
+textarea {
+  min-height: 2em;
 }
