--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,8 @@
   <header class="header" role="banner">
     <div class="container">
       <nav>
-        <%= link_to "Users", users_url %>
-        <%= link_to "TYMLs", tymls_url %>
+        <%= link_to "Received", received_url %>
+        <%= link_to "Sent", sent_url %>
         <%= (link_to "Sign-out", destroy_user_session_path, :method => 'delete') if user_signed_in? %>
       </nav>
       <h1 class="logo-send">
