can type in email and send now
replaced collection select with text_field. email must be associated
with existing user and not mispelled for app to work.

--- a/app/views/users/_tyml_form.html.erb
+++ b/app/views/users/_tyml_form.html.erb
@@ -3,9 +3,10 @@
     <%= f.hidden_field :sender_id, :value => @current_user.id %>
 
     <%= f.text_field :url, :placeholder => "Enter URL here" %>
-    <%= f.collection_select :receiver_id, User.all, :id, :name %>
+    <%= f.text_field :receiver_id, :placeholder => "Email" %>
     <%= f.text_area :note, :placeholder => "Note (optional)", :rows => "2" %>
     <%= f.submit %>
   </div>
 
 <% end -%>
+
