--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -118,6 +118,7 @@ body {
   font-size: 7em;
   text-align: center;
   color: white;
+  text-shadow: 0 2px 3px rgba(46, 48, 146, 0.4);
 }
 
 .logo-send a {
@@ -130,7 +131,8 @@ body {
   text-align: center;
   line-height: 1.2;
   color: white;
-  margin: 1.25em auto;
+  margin: 0.75em auto 1.25em;
+  text-shadow: 0 2px 3px rgba(46, 48, 146, 0.4);
 }
 
 .container {
@@ -148,12 +150,51 @@ body {
   color: white;
 }
 
+.note-form h3 {
+  text-align: center;
+  font-size: 1.5em;
+  text-shadow: 0 2px 3px rgba(46, 48, 146, 0.4);
+  margin: 1.5em auto 0.75em;
+}
+
 input, textarea, select {
   width: 100%;
-  font-size: 2em;
-  border: 1px solid #aaa;
+  font-size: 1.75em;
+  border: 0;
+  border-radius: 2px;
+  font-family: 'Open Sans', Helvetica, sans-serif;
+  font-weight: 300;
+  color: #444;
+  margin-bottom: 0.25em;
+}
+
+input, textarea {
+  padding: 0.25em 0.5em;
 }
 
 textarea {
   min-height: 2em;
+}
+
+input[type="submit"] {
+  display: inline-block;
+  width: auto;
+  padding-right: 2em;
+  padding-left: 2em;
+  margin: 0 auto;
+  /* background: #48ef48; */
+  background: #45e645;
+  box-shadow: inset 0 -2px 0 rgba(255,255,255,0.4);
+  cursor: pointer;
+  position: relative;
+  border-radius:  0.2em;
+  color: #fff;
+}
+input[type="submit"]:active:before {
+  top: 0.17em;
+  box-shadow: 0 0.03em 0 red;
+}
+
+.input-container {
+  text-align: center;
 }
