--- a/app/views/users/_tyml_form.html.erb
+++ b/app/views/users/_tyml_form.html.erb
@@ -1,11 +1,14 @@
 <%= form_for @tyml do |f| %>
   <div class="note-form">
+    <h3>Thought you might like&hellip;</h3>
     <%= f.hidden_field :sender_id, :value => @current_user.id %>
 
     <%= f.text_field :url, :placeholder => "Enter URL here" %>
     <%= f.collection_select :receiver_id, User.all, :id, :name %>
     <%= f.text_area :note, :placeholder => "Note (optional)", :rows => "2" %>
-    <%= f.submit %>
+    <div class="input-container">
+      <%= f.submit "Share" %>
+    </div>
   </div>
 
 <% end -%>
