--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -176,23 +176,46 @@ textarea {
   min-height: 2em;
 }
 
+strong {
+  font-weight: 400;
+}
+
+h3 {
+  color: white;
+  text-align: center;
+  font-size: 1.5em;
+  text-shadow: 0 2px 3px rgba(46, 48, 146, 0.4);
+}
+h3 a {
+  color: white;
+}
+h3 a:hover {
+  text-decoration:none;
+}
+
 input[type="submit"] {
   display: inline-block;
   width: auto;
   padding-right: 2em;
   padding-left: 2em;
   margin: 0 auto;
-  /* background: #48ef48; */
-  background: #45e645;
-  box-shadow: inset 0 -2px 0 rgba(255,255,255,0.4);
+  background: #ff321b;
+  background: -moz-linear-gradient(top,  #ff321b 0%, #d30303 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ff321b), color-stop(100%,#d30303));
+  background: -webkit-linear-gradient(top,  #ff321b 0%,#d30303 100%);
+  background: -o-linear-gradient(top,  #ff321b 0%,#d30303 100%);
+  background: -ms-linear-gradient(top,  #ff321b 0%,#d30303 100%);
+  background: linear-gradient(to bottom,  #ff321b 0%,#d30303 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff321b', endColorstr='#d30303',GradientType=0 );
+  border:1px solid #ac0300;
+  text-shadow: 0 2px 3px #b91314;
+  box-shadow: 0 0.2em 0 #ac0300;
   cursor: pointer;
   position: relative;
   border-radius:  0.2em;
   color: #fff;
-}
-input[type="submit"]:active:before {
-  top: 0.17em;
-  box-shadow: 0 0.03em 0 red;
+  margin-top: 0.5em;
+  font-weight: 400;
 }
 
 .input-container {
