--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,22 +5,16 @@
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
-  <!--<link href='http://fonts.googleapis.com/css?family=Exo:400,800,800italic,400italic|Open+Sans:300italic,400italic,300,400' rel='stylesheet' type='text/css'>-->
+  <link href='http://fonts.googleapis.com/css?family=Exo:400,800,800italic,400italic|Open+Sans:300italic,400italic,300,400' rel='stylesheet' type='text/css'>
 </head>
 <body>
   <header class="header" role="banner">
     <div class="container">
       <nav>
-        <%= link_to "Received", received_url %>
-        <%= link_to "Sent", sent_url %>
+        <%= link_to "Users", users_url %>
+        <%= link_to "TYMLs", tymls_url %>
         <%= (link_to "Sign-out", destroy_user_session_path, :method => 'delete') if user_signed_in? %>
       </nav>
-      <h1 class="logo-send">
-        <%= link_to "TYML", tymls_url %>
-      <h1>
-      <h2 class="tagline-send">
-        The best way to share content<br />with the people you care about.
-      </h2>
     </div>
   </header>
 
