Trying to get mails to work on Heroku.

--- a/app/views/tyml_mailer/notification.text.erb
+++ b/app/views/tyml_mailer/notification.text.erb
@@ -1,7 +1,11 @@
+TYML
 
+<%= @tyml.sender.name %> sent you a TYML!
 
-<%= @tyml.sender.name %> sent you a tyml!
+TYML is the new way to receive awesome content from people you care about. Choose how you want to be notified, and cut through the noise.
 
-<%= @tyml.url %>
+URL: <%= @tyml.url %>
 
-check out <%= link_to "tyml!", root_url %>
+<%= @tyml.note %>
+
+Check out: <%= link_to "TYML", "http://tyml.it" %>
