--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -9,108 +9,11 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require_self
- *= require_tree .
  */
 
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
+@import "_reset";
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-  display: block;
-}
-body {
-  line-height: 1;
-}
-ol, ul {
-  list-style: none;
-}
-blockquote, q {
-  quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-  content: '';
-  content: none;
-}
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-html {
-  font-size: 18px;
-  line-height: 1.5em;
-  font-family: 'Open Sans', Helvetica, sans-serif;
-  font-weight: 300;
-  width: 100%;
-  height: 100%;
-  background: #1b75bb;
-}
-
-body {
-  background: #62b1e2;
-  background: -moz-radial-gradient(center, ellipse cover,  #62b1e2 0%, #1b75bb 55%);
-  background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,#62b1e2), color-stop(55%,#1b75bb));
-  background: -webkit-radial-gradient(center, ellipse cover,  #62b1e2 0%,#1b75bb 55%);
-  background: -o-radial-gradient(center, ellipse cover,  #62b1e2 0%,#1b75bb 55%);
-  background: -ms-radial-gradient(center, ellipse cover,  #62b1e2 0%,#1b75bb 55%);
-  background: radial-gradient(ellipse at center,  #62b1e2 0%,#1b75bb 55%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#62b1e2', endColorstr='#1b75bb',GradientType=1 );
-  height: 100%;
-  width: 100%;
-  background-repeat: no-repeat;
-  padding: 0 1em;
-}
-
-*, :after, :before {
-  box-sizing: border-box;
-}
-
-.header {
-
-}
-
-.header nav {
-  text-align: right;
-  margin: 1em auto;
-}
-.header nav a {
-  color: white;
-  text-decoration: none;
-  margin-left: 1em;
-}
-
-.header nav a:first-child {
-  margin-left: 0;
-}
-
-.header nav a:hover {
-  text-decoration: none;
-}
+@import "_base";
 
 .logo-send {
   font-family: "Exo", Helvetica, sans-serif;
