--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,18 +1,27 @@
-<h2>Sign up</h2>
+<h1 class="logo-send">
+  <%= link_to "TYML", tymls_url %>
+<h1>
+<h2 class="tagline-send">
+  The best way to share content<br />with the people you care about.
+</h2>
 
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+<div class="note-form">
+  <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email %></div>
+    <h3>Sign Up</h3>
 
-  <div><%= f.label :password %><br />
-  <%= f.password_field :password %></div>
+    <%= f.email_field :email, :placeholder => "Email" %>
 
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
+    <%= f.password_field :password, :placeholder => "Password" %>
 
-  <div><%= f.submit "Sign up" %></div>
-<% end %>
+    <%= f.password_field :password_confirmation, :placeholder => "Confirm Password" %>
+
+    <%= devise_error_messages! %>
+
+    <div class="input-container">
+      <%= f.submit "Sign Up" %>
+    </div>
+  <% end %>
+</div>
 
 <%= render "devise/shared/links" %>
