--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,15 +8,7 @@
   <link href='http://fonts.googleapis.com/css?family=Exo:400,800,800italic,400italic|Open+Sans:300italic,400italic,300,400' rel='stylesheet' type='text/css'>
 </head>
 <body>
-  <header class="header" role="banner">
-    <div class="container">
-      <nav>
-        <%= link_to "Received", received_url if user_signed_in? %>
-        <%= link_to "Sent", sent_url if user_signed_in? %>
-        <%= (link_to "Sign-out", destroy_user_session_path, :method => 'delete') if user_signed_in? %>
-      </nav>
-    </div>
-  </header>
+  <%= render 'layouts/header' %>
 
 <p class="alert"><%= alert %></p>
 
