--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,4 +23,11 @@
 <%= yield %>
 
 </body>
+
+<script type="text/javascript">
+    jQuery(document).ready(function() {
+        $('#auto_complete').typeahead({source: autocomplete_items});
+    });
+</script>
+
 </html>
