--- a/app/assets/stylesheets/_forms.css.sass
+++ b/app/assets/stylesheets/_forms.css.sass
@@ -1,7 +1,6 @@
 input,
 textarea,
 select
-  width: 100%
   font-size: 1.5em
   border: 0
   border-radius: 2px
@@ -9,6 +8,15 @@ select
   font-weight: 300
   color: #444
   margin-bottom: 0.25em
+
+input[type="text"],
+input[type="search"],
+input[type="email"],
+input[type="number"],
+input[type="password"],
+textarea,
+select
+  width: 100%
 
 input,
 textarea
@@ -42,7 +50,7 @@ input[type="submit"]
   font-weight: 400
 
 .note-form
-  width: 600px
+  width: 500px
   margin: 0 auto
   color: white
   h3
