--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,23 +1,12 @@
-<h1 class="logo-send">
-  <%= link_to "TYML", tymls_url %>
-<h1>
-<h2 class="tagline-send">
-  The best way to share content<br />with the people you care about.
-</h2>
+<%= render "layouts/signin-header" %>
 
 <div class="note-form">
+  <h3>Ready to get started? Create your account below.</h3>
   <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-
-    <h3>Sign Up</h3>
-
     <%= f.email_field :email, :placeholder => "Email" %>
-
     <%= f.password_field :password, :placeholder => "Password" %>
-
     <%= f.password_field :password_confirmation, :placeholder => "Confirm Password" %>
-
     <%= devise_error_messages! %>
-
     <div class="input-container">
       <%= f.submit "Sign Up" %>
     </div>
