--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,6 +3,7 @@
 <div class="note-form">
   <h3>Ready to get started? Create your account below.</h3>
   <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+    <%= f.text_field :name, :placeholder => "Full name" %>
     <%= f.email_field :email, :placeholder => "Email" %>
     <%= f.password_field :password, :placeholder => "Password" %>
     <%= f.password_field :password_confirmation, :placeholder => "Confirm Password" %>
