create _dashboard.css.sass and import to application sheet

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -16,6 +16,7 @@
 @import header
 @import forms
 @import registrations
+@import dashboard
 
 .logo-send
   font-family: "Exo", Helvetica, sans-serif
