update html on received.html.erb

--- a/app/views/users/received.html.erb
+++ b/app/views/users/received.html.erb
@@ -1,12 +1,13 @@
-<p>
+<div class="container">
   <b>Recieved TYMLs:</b>
   <% @current_user.received_tymls.each do |tyml| %>
-  <ul>
-    <li><%=  tyml.sender.name %></li>
-    <li><%=  link_to tyml.url, tyml_url(tyml, :viewed => 'true', :url => tyml.url ), :method => 'put', :target => '_blank' %></li>
-    <li><%=  tyml.note %></li>
-    <li>Viewed: <%=  tyml.viewed %></li>
-  </ul>
+  <div class="tyml-container">
+    <p class="tyml-profile-image"><!-- put profile pic code here --></p>
+    <p class="tyml-user"><%=  tyml.sender.name %> thought you might like&hellip;</p>
+    <p class="tyml-url"><%=  link_to tyml.url, tyml_url(tyml, :viewed => 'true', :url => tyml.url ), :method => 'put', :target => '_blank' %></p>
+    <p class="tyml-note"><%=  tyml.note %></p>
+    <div class="tyml-viewed">Viewed: <%=  tyml.viewed %></div>
+  </div>
   <% end %>
-</p>
+</div>
   
