received page has images of people who sent you the tymls

--- a/app/views/users/received.html.erb
+++ b/app/views/users/received.html.erb
@@ -2,7 +2,7 @@
   <b>Recieved TYMLs:</b>
   <% @current_user.received_tymls.each do |tyml| %>
   <div class="tyml-container">
-    <p class="tyml-profile-image"><!-- put profile pic code here --></p>
+    <p class="tyml-profile-image"><%= image_tag tyml.sender.profile_pic %></p>
     <p class="tyml-user"><%=  tyml.sender.name %> thought you might like&hellip;</p>
     <p class="tyml-url"><%=  link_to tyml.url, tyml_url(tyml, :viewed => 'true', :url => tyml.url ), :method => 'put', :target => '_blank' %></p>
     <p class="tyml-note"><%=  tyml.note %></p>
@@ -10,4 +10,4 @@
   </div>
   <% end %>
 </div>
-  
+
