--- a/app/assets/stylesheets/_base.css.sass
+++ b/app/assets/stylesheets/_base.css.sass
@@ -27,6 +27,15 @@ body
 *, :after, :before
   box-sizing: border-box
 
+.group:before,
+.group:after
+  content: ""
+  display: table
+.group:after
+  clear: both
+.group
+  zoom: 1
+
 .container
   max-width: 960px
   margin: 0 auto
