--- a/app/assets/stylesheets/_dashboard.css.sass
+++ b/app/assets/stylesheets/_dashboard.css.sass
@@ -2,3 +2,47 @@
   background: white
   margin-bottom: 1em
   padding: 1em
+  position: relative
+  p
+    margin-top: 0.5em
+    &:first-child
+      margin-top: 0
+
+.tyml-profile-image
+  width: 4em
+  height: 4em
+  float: left
+  margin-right: 1em
+  img
+    width: 100%
+    height: auto
+    -webkit-border-radius: 50%
+    -moz-border-radius: 50%
+    border-radius: 50%
+
+.tyml-content-wrap
+  float: left
+
+.tyml-user
+  span
+    font-weight: bold
+
+.tyml-url
+
+.tyml-note
+  font-style: oblique
+  &:after,
+  &:before
+    content: "\""
+
+.tyml-viewed
+  position: absolute
+  top: 0.5em
+  right: 0.5em
+  color: white
+  font-size: 0.5em
+  background: #ccc
+  padding: 0.5em
+  -webkit-border-radius: 3px
+  -moz-border-radius: 3px
+  border-radius: 3px
