add comments to received

--- a/app/views/users/received.html.erb
+++ b/app/views/users/received.html.erb
@@ -7,7 +7,9 @@
       <p class="tyml-user"><span><%=  tyml.sender.name %></span> thought you might like&hellip;</p>
       <p class="tyml-url"><%=  link_to tyml.url, tyml_url(tyml, :viewed => 'true', :url => tyml.url ), :method => 'put', :target => '_blank' %></p>
       <p class="tyml-note"><%=  tyml.note %></p>
+      <!-- update this to show conditionally. if tyml.viewed == true then include .tyml-viewed div -->
       <div class="tyml-viewed">Viewed: <%=  tyml.viewed %></div>
+      <!-- end conditional -->
     </div>
   </div>
   <% end %>
