Added conditional to show 'Viewed' only when a TYML has been viewed.

--- a/app/views/users/received.html.erb
+++ b/app/views/users/received.html.erb
@@ -8,10 +8,11 @@
       <p class="tyml-url"><%=  link_to tyml.url, tyml_url(tyml, :viewed => 'true', :url => tyml.url ), :method => 'put', :target => '_blank' %></p>
       <p class="tyml-note"><%=  tyml.note %></p>
       <!-- update this to show conditionally. if tyml.viewed == true then include .tyml-viewed div -->
-      <div class="tyml-viewed">Viewed: <%=  tyml.viewed %></div>
+      <% unless tyml.viewed != true %>
+        <div class="tyml-viewed">Viewed</div>
+      <% end %>
       <!-- end conditional -->
     </div>
   </div>
   <% end %>
 </div>
-
