visual cleanup on register and signin pages

--- a/app/assets/stylesheets/_base.css.sass
+++ b/app/assets/stylesheets/_base.css.sass
@@ -23,6 +23,7 @@ body
   width: 100%
   background-repeat: no-repeat
   padding: 0 1em
+  margin-bottom: 1em
 
 *, :after, :before
   box-sizing: border-box
