--- a/app/views/layouts/_signin-header.html.erb
+++ b/app/views/layouts/_signin-header.html.erb
@@ -1,3 +1,15 @@
+<header class="header" role="banner">
+  <div class="container">
+    <nav>
+      <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
+        <%= link_to "Sign up", new_registration_path(resource_name) %><br />
+      <% end -%>
+      <%- if controller_name != 'sessions' %>
+        <%= link_to "Sign in", new_session_path(resource_name) %><br />
+      <% end -%>
+    </nav>
+  </div>
+</header>
 <h1 class="logo-send">
   <%= link_to "TYML", tymls_url %>
 <h1>
