clean us header and base stylesheets, remove headlines from received and sent

--- a/app/assets/stylesheets/_forms.css.sass
+++ b/app/assets/stylesheets/_forms.css.sass
@@ -11,6 +11,8 @@ select
   font-weight: 300
   color: #444
   margin-bottom: 0.25em
+  @include respond-to(small)
+    font-size: 1em
 
 input[type="text"],
 input[type="search"],
