--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<header class="header" role="banner">
+<header class="header group" role="banner">
   <div class="container">
     <nav>
       <%= (link_to "TYML", dashboard_url, :class => 'logo') if user_signed_in? %>
