--- a/app/assets/stylesheets/_dashboard.css.sass
+++ b/app/assets/stylesheets/_dashboard.css.sass
@@ -21,11 +21,11 @@
     float: none
 
 .tyml-user
-  font-weight: bold
+  font-weight: 600
   padding-left: 5em
   span
     display: inline-block
-    font-weight: normal
+    font-weight: 300
   @include respond-to(xsmall)
     text-align: center
     padding-left: 0
