--- a/app/views/users/_tyml_form.html.erb
+++ b/app/views/users/_tyml_form.html.erb
@@ -7,7 +7,7 @@
     <%= f.hidden_field :sender_id, :value => @current_user.id %>
 
     <%= f.text_field :url, :placeholder => "Enter URL here" %>
-    <%= f.email_field :receiver_email, :placeholder => "Email", :id => "auto_complete", :autocomplete => "off" %>
+    <%= f.text_field :receiver_email, :placeholder => "Email", :id => "auto_complete", :autocomplete => "off" %>
     <%= f.text_area :note, :placeholder => "Note (optional)", :rows => "2" %>
     <div class="input-container">
       <%= f.submit "Share" %>
