add comments.sass, update fonts (typekit)

--- a/app/assets/stylesheets/_header.css.sass
+++ b/app/assets/stylesheets/_header.css.sass
@@ -3,7 +3,7 @@
   margin-bottom: 1em
   .logo
     float: left
-    font-family: "Exo", Helvetica, sans-serif
+    font-family: "proxima-nova", Helvetica, sans-serif
     font-weight: 800
     font-size: 2em
     text-align: center
