--- a/app/assets/stylesheets/_sign-in.css.sass
+++ b/app/assets/stylesheets/_sign-in.css.sass
@@ -1,3 +1,18 @@
+.logo-send
+  font-family: "proxima-nova", Helvetica, sans-serif
+  font-weight: 800
+  font-size: 7em
+  text-align: center
+  color: white
+  text-shadow: 0 2px 3px rgba(46, 48, 146, 0.4)
+  @include respond-to(small)
+    font-size: 4em
+
+.logo-send
+  a
+    text-decoration: none
+    color: white
+
 .forgot-password
   color: white
   text-align: center
