--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
-  <link href='http://fonts.googleapis.com/css?family=Exo:400,800,800italic,400italic|Open+Sans:300italic,400italic,600italic,300,400,600' rel='stylesheet' type='text/css'>
+  <script type="text/javascript" src="//use.typekit.net/xhm7oux.js"></script> <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
