comment form styles

--- a/app/assets/stylesheets/_dashboard.css.sass
+++ b/app/assets/stylesheets/_dashboard.css.sass
@@ -51,15 +51,15 @@
   &:after,
   &:before
     content: "\""
+  @include respond-to(xsmall)
+    text-align: center
 
 .tyml-viewed
   position: absolute
-  top: 0.5em
-  right: 0.5em
-  color: white
-  font-size: 0.5em
-  background: #ccc
-  padding: 0.5em
+  top: 1em
+  right: 1em
+  color: #3aad4b
+  font-size: 0.75em
   -webkit-border-radius: 3px
   -moz-border-radius: 3px
   border-radius: 3px
