--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,3 +1,24 @@
+<% if controller_name == 'sessions' || controller_name == 'registrations' %>
+
+<header class="header" role="banner">
+  <div class="container">
+    <nav>
+      <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
+        <%= link_to "Sign up", new_registration_path(resource_name) %><br />
+      <% end -%>
+      <%- if controller_name != 'sessions' %>
+        <%= link_to "Sign in", new_session_path(resource_name) %><br />
+      <% end -%>
+    </nav>
+  </div>
+</header>
+<h1 class="logo-send">
+  <%= link_to "TYML", tymls_url %>
+<h1>
+<h2 class="tagline-send">
+  The best way to share content<br />with the people you care about.
+</h2>
+<% else %>
 <header class="header group" role="banner">
   <div class="container">
     <nav>
@@ -8,3 +29,4 @@
     </nav>
   </div>
 </header>
+<% end %>
