--- a/app/assets/stylesheets/_comments.css.sass
+++ b/app/assets/stylesheets/_comments.css.sass
@@ -1,7 +1,9 @@
-.comment-form
-  margin-top: 1em
+.comments-container
   border-top: 1px dotted #ccc
   padding-top: 1em
+  margin-top: 1em
+.comment-form
+  margin-top: 1em
   max-width: 500px
   input[type="text"]
     font-size: 1em
@@ -16,3 +18,32 @@
     input[type="submit"]
       width: 100%
 .comment-input-container
+
+.single-comment-wrap
+  margin-top: 1em
+  &:first-child
+    margin-top: 0
+
+.comment-profile-image
+  width: 2em
+  height: 2em
+  float: left
+  img
+    width: 100%
+    height: auto
+    -webkit-border-radius: 50%
+    -moz-border-radius: 50%
+    border-radius: 50%
+  @include respond-to(xsmall)
+    margin: 0 auto 0.5em auto
+
+.comment-note
+  padding-left: 3em
+  padding-top: 0.25em
+  span.user-name
+    display: inline-block
+    font-weight: 600
+  @include respond-to(xsmall)
+    font-size: 0.75em
+    span
+      display: block
