--- a/app/views/users/received.html.erb
+++ b/app/views/users/received.html.erb
@@ -2,6 +2,9 @@
   <% @current_user.received_tymls.order('created_at desc').each do |tyml| %>
     <% @tyml = tyml %>
   <div class="tyml-container group">
+    <% unless tyml.viewed != true %>
+      <div class="tyml-viewed">Viewed</div>
+    <% end %>
     <div class="tyml-profile-image"><%= image_tag tyml.sender.profile_pic %></div>
     <p class="tyml-user"><%=  tyml.sender.name %> <span class="tyml-copy">thought you might like&hellip;</span></p>
     <div class="tyml-content-wrap">
@@ -11,18 +14,17 @@
         <p class="tyml-note"><%=  tyml.note %></p>
       <% end %>
 
-      <!-- update this to show conditionally. if tyml.viewed == true then include .tyml-viewed div -->
-      <% unless tyml.viewed != true %>
-        <div class="tyml-viewed">Viewed</div>
-      <% end %>
-      <!-- end conditional -->
-
-      <% tyml.comments.each do |comment| %>
-        <%= comment.user.name %>
-        <%= image_tag comment.user.profile_pic, :width => "200" %>
-        <%= comment.comment_text %>
-      <% end %>
-      <%= render 'comment' %>
+      <div class="comments-container">
+        <% tyml.comments.each do |comment| %>
+          <div class="single-comment-wrap group">
+            <div class="comment-profile-image"><%= image_tag comment.user.profile_pic %></div>
+            <p class="comment-note">
+              <span class="user-name"><%= comment.user.name %></span> &mdash; <%= comment.comment_text %>
+            </p>
+          </div>
+        <% end %>
+        <%= render 'comment' %>
+      </div>
     </div>
   </div>
   <% end %>
