update comment styles for sent page

--- a/app/assets/stylesheets/_comments.css.sass
+++ b/app/assets/stylesheets/_comments.css.sass
@@ -5,6 +5,8 @@
 .comment-form
   margin-top: 1em
   max-width: 500px
+  &:first-child
+    margin-top: 0
   input[type="text"]
     font-size: 1em
     border: 1px solid #ccc
