--- a/app/views/users/sent.html.erb
+++ b/app/views/users/sent.html.erb
@@ -19,12 +19,17 @@
       <% unless tyml.note.blank? %>
         <p class="tyml-note"><%=  tyml.note %></p>
       <% end %>
-      <% tyml.comments.each do |comment| %>
-        <%= comment.user.name %>
-        <%= image_tag comment.user.profile_pic, :width => "200" %>
-        <%= comment.comment_text %>
-      <% end %>
-      <%= render 'comment' %>
+      <div class="comments-container">
+        <% tyml.comments.each do |comment| %>
+          <div class="single-comment-wrap group">
+            <div class="comment-profile-image"><%= image_tag comment.user.profile_pic %></div>
+            <p class="comment-note">
+              <span class="user-name"><%= comment.user.name %></span> &mdash; <%= comment.comment_text %>
+            </p>
+          </div>
+        <% end %>
+        <%= render 'comment' %>
+      </div>
     </div>
   </div>
   <% end %>
