--- a/app/assets/stylesheets/_base.css.sass
+++ b/app/assets/stylesheets/_base.css.sass
@@ -26,6 +26,8 @@ body
   padding-left: 1em
 
 *, :after, :before
+  -webkit-box-sizing: border-box
+  -moz-box-sizing: border-box
   box-sizing: border-box
 
 .group:before,
