--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -23,10 +23,13 @@
   <div class="container">
     <nav>
       <%= (link_to "TYML", dashboard_url, :class => 'logo') if user_signed_in? %>
-      <%= link_to "Received", received_url if user_signed_in? %>
+      <%= link_to "Dashboard", dashboard_url if user_signed_in? %>
       <%= link_to "Sent", sent_url if user_signed_in? %>
       <%= (link_to "Sign-out", destroy_user_session_path, :method => 'delete') if user_signed_in? %>
     </nav>
   </div>
 </header>
+
+<%= render 'users/tyml_form' %>
+
 <% end %>
