--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <% @current_user.received_tymls.order('created_at desc').each do |tyml| %>
-    <% @tyml = tyml %>
+    <% @tyml_comment = tyml %>
   <div class="tyml-container group">
     <% unless tyml.viewed != true %>
       <div class="tyml-viewed">Viewed</div>
