--- a/app/views/users/sent.html.erb
+++ b/app/views/users/sent.html.erb
@@ -15,7 +15,7 @@
 
 	<span class="tyml-copy">might like&hellip;</span></p>
     <div class="tyml-content-wrap">
-      <p class="tyml-url"><%=  link_to tyml.url, tyml_url(tyml, :viewed => 'true', :url => tyml.url ), :method => 'put', :target => '_blank' %></p>
+      <p class="tyml-url"><%=  link_to tyml.url, tyml.url, :target => '_blank' %></p>
       <% unless tyml.note.blank? %>
         <p class="tyml-note"><%=  tyml.note %></p>
       <% end %>
