--- a/app/views/users/sent.html.erb
+++ b/app/views/users/sent.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <% @current_user.sent_tymls.order('created_at desc').each do |tyml| %>
-    <% @tyml = tyml %>
+    <% @tyml_comment = tyml %>
   <div class="tyml-container group">
     <% unless tyml.receiver.blank? %>
     <div class="tyml-profile-image"><%= image_tag tyml.receiver.profile_pic %></div>
