--- a/app/assets/stylesheets/_forms.css.sass
+++ b/app/assets/stylesheets/_forms.css.sass
@@ -19,6 +19,7 @@ input[type="search"],
 input[type="email"],
 input[type="number"],
 input[type="password"],
+input[type="url"],
 textarea,
 select
   width: 100%
