--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -50,6 +50,7 @@ $xxlarge: 960px
 @import registrations
 @import dashboard
 @import comments
+@import modal
 @import bootstrap.custom
 
 .tagline-send
