--- a/app/assets/stylesheets/_modal.css.sass
+++ b/app/assets/stylesheets/_modal.css.sass
@@ -1,19 +1,16 @@
 .modal-overlay
+  display: none
   position: fixed
   overflow: scroll
-  display: table
   left: 0
   top: 0
   width: 100%
   height: 100%
+  padding: 1em
   background: rgba(#1b75bb,0.925)
   text-align: center
-  .vertical-center
-    padding: 1em
-    display: table-cell
-    text-align: center
-    vertical-align: middle
 .share-container
+  margin-top: 4em
   max-width: 100%
   text-align: left
   background: #fafafa
