add share modal to all non-signin pages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,9 @@
 <p class="alert"><%= alert %></p>
 
 <%= yield %>
+<% if controller_name != 'sessions' && controller_name != 'registrations' %>
+  <%= render 'tymls/share-modal' %>
+<% end %>
 
 </body>
 
