--- a/app/assets/stylesheets/_modal.css.sass
+++ b/app/assets/stylesheets/_modal.css.sass
@@ -13,7 +13,7 @@
   margin-top: 4em
   max-width: 100%
   text-align: left
-  background: #fafafa
+  background: #fcfcfc
   padding: 1em
   display: inline-block
   -webkit-border-radius: 3px
